--- a/app/src/main/res/layout/activity_singledoc.xml
+++ b/app/src/main/res/layout/activity_singledoc.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="48dp"
-        android:text="Lugar de la firma"
+        android:text="Posicion de la firma"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
