--- a/app/src/main/res/layout/activity_singledoc.xml
+++ b/app/src/main/res/layout/activity_singledoc.xml
@@ -140,7 +140,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rgLugarFirma" />
 
     <TextView
-        android:id="@+id/txt"
+        android:id="@+id/txtSignPage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -158,6 +158,6 @@
         android:layout_marginTop="8dp"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSignPage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
