--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,19 @@
     tools:context=".MainActivity">
 
     <!-- ImageView en la mitad superior -->
+
+    <Button
+        android:id="@+id/btnDocsFirmados"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/signed_documents"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnFirmarDocs" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
@@ -44,6 +57,7 @@
     <!-- Botón "Firmar documento(s)" -->
     <Button
         android:id="@+id/btnFirmarDocs"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
@@ -51,6 +65,6 @@
         android:text="@string/sign_documents"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnInstalarCertificado"
-        style="@style/Widget.AppCompat.Button.Colored"/>
+        app:layout_constraintTop_toBottomOf="@id/btnInstalarCertificado" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
