--- a/app/src/main/res/layout/activity_signed_docs_historic.xml
+++ b/app/src/main/res/layout/activity_signed_docs_historic.xml
@@ -16,6 +16,7 @@
             android:id="@+id/toolBarSignedDocs"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:layout_marginBottom="10dp"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
             app:title="Historial de documentos firmados"
