--- a/app/src/main/res/layout/item_signed_docs_historic.xml
+++ b/app/src/main/res/layout/item_signed_docs_historic.xml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#CFF3F0"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:layout_marginBottom="10dp">
 
     <ImageView
         android:id="@+id/docSignedIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_document" />
 
-    <TextView
-        android:id="@+id/docSignedText"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_weight="1"
-        android:layout_gravity="center_vertical"
-        android:paddingStart="8dp"
-        android:textSize="18sp" />
+        android:orientation="vertical"
+        android:paddingStart="8dp">
+
+        <TextView
+            android:id="@+id/docSignedTextName"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:maxLines="1"
+            android:textSize="26sp" />
+
+        <TextView
+            android:id="@+id/docSignedTextDate"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textSize="14sp" />
+    </LinearLayout>
+
 </LinearLayout>
+
