--- a/app/src/main/res/layout/item_signed_docs_historic.xml
+++ b/app/src/main/res/layout/item_signed_docs_historic.xml
@@ -9,14 +9,14 @@
 
     <ImageView
         android:id="@+id/docSignedIcon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_document" />
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="120dp"
         android:layout_weight="1"
         android:orientation="vertical"
         android:paddingStart="8dp">
@@ -24,12 +24,25 @@
         <TextView
             android:id="@+id/docSignedTextName"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="30dp"
+            android:fontFamily="sans-serif-black"
             android:maxLines="1"
-            android:textSize="26sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/docSignedTextDate"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/docSignedTextPerson"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/docSignedTextMethod"
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:textSize="14sp" />
