--- a/app/src/main/res/layout/item_signed_docs_historic.xml
+++ b/app/src/main/res/layout/item_signed_docs_historic.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#CFF3F0"
+    android:layout_marginBottom="10dp"
+    android:background="@color/lightBlueLogo"
     android:orientation="horizontal"
-    android:padding="8dp"
-    android:layout_marginBottom="10dp">
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/docSignedIcon"
